# strider-sdr-system

./: .env.example  .gitignore  AGENT_SPEC.md  README.md  code-quality-review.md  pyproject.toml  slop-review.md
.cursor/rules/: ai-slop-remediation.mdc
.devcontainer/: devcontainer.json
docs/: 01-system-design.md  02-tool-contracts.md  03-retrieval.md  04-reliability.md  05-security.md  06-evaluation.md  07-product-thinking.md  ARKENSTONE_DESIGN_SYSTEM.md  README.md  arkenstone_sales_playbook_master.docx
evals/: __init__.py  run.py
evals/adversarial/: adversarials.json  prompt_injection.json
evals/fixtures/: README.md  classified_marker.html
evals/golden/: borderline.json  example.json  neither.json  track_1.json  track_2.json
sales-ui/: index.html  package-lock.json  package.json  vite.config.ts
sales-ui/src/: AgentPlaceholder.tsx  App.tsx  AppSidebar.tsx  BatchWorkspace.tsx  BriefCard.tsx  main.tsx  (+12 more)
scripts/: form5500_build_index.py  rerun_sample.sh
tests/: conftest.py  test_agent_cancel.py  test_agent_tool_payload.py  test_brief.py  test_compliance.py  test_config.py  test_config_env_ignore_empty.py  test_eval_run_grading_playbook.py  test_fedramp_marketplace.py  test_form_5500_lookup.py  test_identity.py  test_output_filter.py  test_parse_brief.py  test_playbook_alignment.py  test_rate_limit.py  test_reliability.py  test_sales_app_dotenv.py  test_sales_batch_parse.py  test_sales_single.py  test_sbir_awards.py  test_spreadsheet_import.py  test_tool_contracts.py  test_tracing.py  test_url_allowlist.py  test_usaspending_awards.py  test_wall_synthesis.py
(+45 files in other folders)
