[project]
name = "prospect-research"
version = "0.1.0"
description = "Opinionated starter for building Claude-powered agents"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "tenacity>=9.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "structlog>=24.1",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
]
ui = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.9",
    "openpyxl>=3.1.0",
]
rag = [
    "voyageai>=0.2",       # or swap for openai, cohere, sentence-transformers
    "numpy>=1.26",
]
mcp = [
    "mcp>=1.0",
]

[project.scripts]
prospect-sales-ui = "agent.sales_app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "B", "UP", "ASYNC"]

[tool.mypy]
python_version = "3.11"
strict = true
